syntax = "proto3";

package geo;

// IMPORTANT: keep or update this to match your repo path.
option go_package = "github.com/yourusername/geo-service/proto;proto";

// Define your messages and services here.
service GeoService {
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse);
  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse);

  // NEW: This is the RPC the Matching Service calls
  rpc FindDrivers(FindDriversRequest) returns (FindDriversResponse);
}

// Existing messages
message UpdateLocationRequest {
  string driverId = 1;
  string latitude = 2;
  string longitude = 3;
}

message UpdateLocationResponse {
  string message = 1;
}

message GetLocationRequest {
  string driverId = 1;
}

message GetLocationResponse {
  string latitude = 1;
  string longitude = 2;
}

// NEW: define the messages for finding nearby drivers
message FindDriversRequest {
  double latitude = 1;
  double longitude = 2;
  double radius = 3; 
  uint32 limit = 4;
}

message Driver {
  string driverId = 1;
  double latitude = 2;
  double longitude = 3;
  uint64 geohash = 4;
}

message FindDriversResponse {
  repeated Driver drivers = 1;
}
